# tap-confluence

./: pyproject.toml
tap_confluence/: streams.py  tap.py
