[tool.poetry]
name = "tap-confluence"
version = "0.0.1"
description = "Singer tap for the Confluence Content REST API"
authors = ["Edgar Ramírez Mondragón <edgarrm358@gmail.com>"]
license = "Apache v2"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
singer-sdk = ">=0.14.0"

[tool.poetry.dev-dependencies]
black = ">=22.10"
isort = ">=5.10.1"

[tool.poetry.scripts]
tap-confluence = 'tap_confluence.tap:cli'

[tool.black] # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 100
target-version = ["py39"]
preview = true

[tool.isort] # https://pycqa.github.io/isort/docs/configuration/options.html
color_output = true
line_length = 100
profile = "black"
src_paths = "tap_confluence"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
